[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/health_bar.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/health.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/armor_bar.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/armor.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/energy_bar.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/energy.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/empty_bar.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/fireball_icon.png" type="Texture" id=9]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.899841
margin_bottom = -0.899841
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 150.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 30.0

[node name="HealthBarRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 126.0
margin_bottom = 30.0
texture = ExtResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer/HealthBarRect"]
margin_left = 31.9165
margin_top = 8.08698
margin_right = 115.916
margin_bottom = 128.087
value = 100.0
texture_progress = ExtResource( 3 )

[node name="ArmorBarRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 257.0
margin_bottom = 30.0
texture = ExtResource( 4 )

[node name="ArmorBar" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer/ArmorBarRect"]
margin_left = 31.9165
margin_top = 8.08698
margin_right = 115.916
margin_bottom = 128.087
value = 100.0
texture_progress = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 64.0

[node name="EnergyBarRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 127.0
margin_bottom = 30.0
texture = ExtResource( 6 )

[node name="EnergyBar" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer2/EnergyBarRect"]
margin_left = 31.9165
margin_top = 8.08698
margin_right = 115.916
margin_bottom = 128.087
value = 100.0
texture_progress = ExtResource( 7 )

[node name="SpellBarRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 131.0
margin_right = 257.0
margin_bottom = 30.0
texture = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2/SpellBarRect"]
margin_left = 32.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 22.0
text = "Some Text"

[node name="icon_sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer2/SpellBarRect"]
position = Vector2( 13.9608, 14.596 )
scale = Vector2( 0.294812, 0.344022 )
texture = ExtResource( 9 )

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 150.0

[node name="Tween" type="Tween" parent="."]

